packages/libs/sdk/spec/testSetup/jestSetupAfterEnv.ts
// @ts-ignore
//afterEach(async () => {
// pause after tests to avoid race conditions
// Needed because we were seeing this issue:
// TypeError: Cannot read properties of null (reading '_location')
// Seems to be related to pollyjs'scleanup
// await new Promise((resolve) => setTimeout(resolve, 100));
//});
